09-24-20 : Fixed a crash bug <3

09-15-20 : Non-warriors should find honing defense and advanced defense
            a little easier now. This puts them on par with warriors.

09-15-20 : Fixed a crash bug in the Glacial Proc

09-15-20 : Stat updates
            - Spells and skills now have a modification stat that affects 
              damage and duration of buffs/debuffs. See helpfiles

08-22-20 : Deikhan Changes
            - Renamed all advanced discs so they don't conflict with cleric
            - Removed cleric wrath spells (rain brimstone etc.)
            - Moved around some skills to match up with the new discs
            - Divine Rescue: Advanced form of rescue that heals the target
            - 2h specialization: Additional damage with 2h weapons
            - Divine Grace: Resistence to some afflictions
            - Guardian's light: Protection proc while using a shield
            - Removed kick
            - Smite is reworked: less damage but usable more often
              Includes a +hit buff -protection debuff so it isn't advised
              to use it while tanking
            - Changed deikhan sword sanc proc to Holy Wrath (+hit buff)
              This makes it no longer conflict with spell sanctuary
            - Deikhan Auras : Buffs that affect a deikhans entire group when in
              the same room. See help aura

08-21-20 : Slightly increased lifeforce gains from sacrifice.

07-09-20 : Tweaks to skill/spell difficulty.
            difficulty | Success | Damage
            - trivial      110%    105%
            - easy         100%    118%
            - normal        90%    133%
            - difficult     80%    154%
            - dangerous     70%    182%
            Additionally updated the difficulty of a lot of individual spells
            Mostly buffs, debuffs and utility spells. See helpfiles

07-09-20 : Important change to skill/spell difficulty and damage.